# traderrr

./: .env.example  .gitattributes  .gitignore  .pylintrc  BUGFIX_ADMIN_SETUP.md  CONTRIBUTING.md  DATABASE_FIX_PLAN.md  Dockerfile  FIXES_SUMMARY.md  GETTING_STARTED_AUTH.md  LICENSE.md  Makefile  PHASE_0_ARCHITECTURE.md  PHASE_0_DELIVERABLES.txt  PHASE_0_QUICK_START.md  PHASE_0_SPECIFICATION.md  PHASE_0_SUMMARY.md  PHASE_1_COMPLETION.md  PHASE_1_STARTUP_FIXES.md  PHASE_1_TEST_RESULTS.md  README.md  SECURITY.md  TESTING_WITH_API_AUTH.md  TEST_FIXES_SUMMARY.md  TEST_FIX_PLAN.md  alembic.ini  config.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_hook.py  test_phase0.py
.github/: CODEOWNERS  DEPENDABOT.md  ISSUE_GUIDELINES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  blank.md  bug_report.md  config.yml  documentation.md  feature_request.md  maintenance.md
.github/workflows/: code-quality.yml  (+3 more)
app/: __init__.py  cli.py  db.py
bdd/: README.md  environment.py
config/: __init__.py  database.py  settings.py
docs/: API.md  CI_CD_STRATEGY.md  SECURITY_FIXES.md  active_trading_signals.md
migrations/: env.py
scripts/: backtest.py  daily_update.py  data_validator.py  deploy.py  health_check.py  install-hooks.sh  pre_commit_hook.py  setup_hooks.py
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_routes.py  test_authentication.py  test_cli.py  test_config.py  test_dashboard_ui.py  test_data_manager.py  test_db.py  test_error_handling.py  test_indicators.py  test_portfolio.py  test_signals.py
utils/: dev_tools.py
vibe/: data_manager.py  deployment_utilities.py  indicators.py  main_app.py  portfolio_analyzer.py  signal_generator.py  testing_framework.py
(+40 files in other folders)
