[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-signals"
version = "1.0.0"
description = "Advanced trading signals system with Yahoo Finance integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "setuptools",
    "Flask",
    "Flask-CORS",
    "pandas",
    "numpy",
    "yfinance",
    "requests",
    "schedule",
    "TA-Lib",
    "urllib3",
    "gunicorn",
    "python-dotenv",
    "cloudant",
    "ibm-cos-sdk",
    "ibm-watson",
    "scipy",
    "psutil",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "talib.*",
    "cloudant.*",
    "ibm_cos_sdk.*",
    "ibm_watson.*"
]
ignore_missing_imports = true
